# oc_projet10_rest_framework

./: .flake8  .gitignore  README.md  manage.py  postman_apidoc_url.txt  pyproject.toml  pytest.ini  requirements.txt
authentication/: admin.py  models.py
authentication/migrations/: 0001_initial.py  0002_initial.py
flake8_rapport/: authentication.views.report.html  authentication.views.source.html  index.html  softdesk.mocks.report.html  softdesk.mocks.source.html  softdesk.views.report.html  softdesk.views.source.html  tests.apitestcase_test_urls.report.html  tests.apitestcase_test_urls.source.html
flake8_report/: index.html
oc_projet10_rest_framework/: asgi.py  settings.py  tests_settings.py  urls.py  wsgi.py
softdesk/: admin.py  apps.py  exceptions.py  models.py  permissions.py  serializers.py  tests.py  views.py
softdesk/management/commands/: init_app_softdesk.py
softdesk/migrations/: 0001_initial.py
tests/: apitestcase_test_urls.py  test_comments.py  test_issues.py  test_projects.py  test_users.py
