[tool.poetry]
name = "oc-projet10-rest-framework"
version = "0.1.0"
description = ""
authors = ["memphis-tools <rn@github.com>"]
readme = "README.md"
packages = [{include = "oc_projet10_rest_framework"}]

[tool.poetry.dependencies]
python = "^3.10"
asgiref ="^3.7.2"
certifi ="^2023.5.7"
charset-normalizer ="^3.1.0"
colorama ="^0.4.6"
Django ="^4.2.11"
djangorestframework ="^3.14.0"
djangorestframework-simplejwt ="^5.2.2"
flake8 ="^6.0.0"
flake8-html ="^0.4.3"
idna ="^3.7"
Jinja2 ="^3.1.3"
MarkupSafe ="^2.1.3"
mccabe ="^0.7.0"
pycodestyle ="^2.10.0"
pyflakes ="^3.0.1"
Pygments ="^2.15.1"
PyJWT ="^2.7.0"
pytz ="^2023.3"
requests ="^2.31.0"
sqlparse ="^0.5.0"
typing_extensions ="^4.6.3"
urllib3 ="^2.0.7"
Werkzeug ="^2.3.8"
pytest = "^7.4.0"
pytest-django = "^4.5.2"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
